# opencode-orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.windows  FINAL_IMPLEMENTATION_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FLOW_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PROPOSAL.md  INSTALL_SAFETY.md  LICENSE  PROBLEM_SOLVING_REPORT.md  PROJECT_ANALYSIS_AND_IMPROVEMENT.md  README.ko.md  README.md  README.zh.md  REFACTORING_COMPLETE.md  REFACTORING_PROPOSAL.md  compose.yml  package-lock.json  package.json  release.sh  test-load.js  tsconfig.json  vitest.config.ts
.opencode/: context.md
changelogs/: 2026-01-15.md  README.md
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: main.rs  tools.rs
docs/: ADAPTIVE_AGENCY_IMPROVEMENT_PLAN.md  ARCHITECTURAL_VERIFICATION_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_SKILLS_KR.md  BACKGROUND_TASKS_IMPLEMENTATION.md  DEVELOPERS_NOTE.md  FLOW_CHECK.md  IMPROVEMENT_PLAN.md  OPENCODE.md  OPENCODE_SDK_REFERENCE.md  PLUGIN_TROUBLESHOOTING.md  PROMPT_CHANGES_REPORT.md  PUBLISHING.md  RELEASE_NOTES_v0.6.0.md  SKILLS_INTEGRATION_PLAN.md  SMART_BATCH_GUIDE.md  SYSTEM_ARCHITECTURE.md  ULTIMATE_AGENT_PLAN.md  WHY_CUSTOM_ORCHESTRATOR.md  WINDOWS_CONFIGURATION.md  개선안.md  개선안2.md  개선안_통합.md
examples/: orchestrator.jsonc
scripts/: postinstall.ts  preuninstall.ts  release.ts  test-background.ts  test-rust-background.ts
src/: cli.ts  index.ts  tasks.ts
tests/: concurrency.test.ts  integration.test.ts  package.json  parallel-manager.test.ts  rust-integration.ts  task-store.test.ts
(+801 files in other folders)
